// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingModal unit tests Puts first name and last name as readonly if user is signed up normally 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  width: 100%;
  height: 100%;
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  z-index: 1050;
}

.emotion-1 {
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  width: 100%;
  height: auto;
  position: relative;
  z-index: 10;
}

@media (min-width: 768px) {
  .emotion-1 {
    width: 80%;
  }
}

@media (min-width: 1024px) {
  .emotion-1 {
    width: 50%;
  }
}

@media (min-width: 1280px) {
  .emotion-1 {
    width: 40%;
  }
}

.emotion-2 {
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-bottom-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
}

.emotion-3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 100;
  --tw-text-opacity: 1;
  color: rgba(39, 39, 42, var(--tw-text-opacity));
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  margin-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media (min-width: 768px) {
  .emotion-6 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
  }
}

.emotion-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgba(39, 39, 42, var(--tw-text-opacity));
}

.emotion-10 {
  display: block;
  font-weight: 500;
  margin-bottom: 0.25rem;
}

.emotion-11 {
  outline: 2px solid transparent;
  outline-offset: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-12 {
  width: 100%;
  position: relative;
}

.emotion-13 {
  width: 100%;
  padding: 0.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  transition-property: background-color,border-color,color,fill,stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-bg-opacity: 1;
  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
}

.emotion-13:focus {
  --tw-border-opacity: 1;
  border-color: rgba(147, 51, 234, var(--tw-border-opacity));
}

.emotion-13:focus {
  --tw-border-opacity: 1;
  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-23 {
  width: 66.666667%;
  margin-right: 1rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgba(147, 51, 234, var(--tw-border-opacity));
  border-radius: 0.375rem;
  padding-top: 0.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  --tw-bg-opacity: 1;
  background-color: rgba(245, 243, 255, var(--tw-bg-opacity));
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
  height: 8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-25:focus {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow, 0 0 #0000);
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-26 {
  --tw-text-opacity: 1;
  color: rgba(147, 51, 234, var(--tw-text-opacity));
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 33.333333%;
}

.emotion-28 {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-29 {
  padding: 1rem;
  border-top-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-30 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
}

.emotion-30:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-30:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(126, 34, 206, var(--tw-bg-opacity));
}

<div
    class="emotion-0"
    data-testid="modal-backdrop"
    style="opacity: 0;"
  >
    <div
      class="emotion-1"
      style="opacity: 0; transform: translateY(-100%) translateZ(0);"
    >
      <div
        class="emotion-2"
      >
        <h5
          class="emotion-3"
        >
          usermanagement.onboarding.modal.title
        </h5>
      </div>
      <form>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <h4
                class="emotion-7"
              >
                usermanagement.onboarding.modal.introduction_text
              </h4>
            </div>
          </div>
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <label
                class="emotion-10"
              >
                usermanagement.onboarding.modal.form.label_firstName
              </label>
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-12"
                >
                  <input
                    class="emotion-13"
                    data-testid="input-firstName"
                    name="firstName"
                    placeholder=" "
                    readonly=""
                    type="text"
                    value="test"
                  />
                </div>
              </div>
            </div>
            <div
              class="emotion-6"
            >
              <label
                class="emotion-10"
              >
                usermanagement.onboarding.modal.form.label_lastName
              </label>
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-12"
                >
                  <input
                    class="emotion-13"
                    data-testid="input-lastName"
                    name="lastName"
                    placeholder=" "
                    readonly=""
                    type="text"
                    value="tost"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <label
                class="emotion-10"
              >
                usermanagement.onboarding.modal.form.label_picture
              </label>
              <div
                class="emotion-22"
              >
                <div
                  class="emotion-23"
                >
                  <div
                    class="emotion-24"
                  >
                    <div
                      class="emotion-25"
                      data-testid="file-input-picture"
                      tabindex="0"
                    >
                      <p
                        class="emotion-26"
                      >
                        components.form.fileinput.help_message
                      </p>
                      <input
                        accept="image/jpeg,image/png"
                        autocomplete="off"
                        multiple=""
                        name="picture"
                        style="display: none;"
                        tabindex="-1"
                        type="file"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-27"
                >
                  <p
                    class="emotion-28"
                  >
                    usermanagement.onboarding.modal.form.picture_preview
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-29"
        >
          <button
            class="emotion-30"
            data-testid="onboarding-modal-submit"
            type="submit"
          >
            usermanagement.onboarding.modal.form.btn_submit
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OnboardingModal unit tests throws an error if the user is already onboarded 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  width: 100%;
  height: 100%;
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  z-index: 1050;
}

.emotion-1 {
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  width: 100%;
  height: auto;
  position: relative;
  z-index: 10;
}

@media (min-width: 768px) {
  .emotion-1 {
    width: 80%;
  }
}

@media (min-width: 1024px) {
  .emotion-1 {
    width: 50%;
  }
}

@media (min-width: 1280px) {
  .emotion-1 {
    width: 40%;
  }
}

.emotion-2 {
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-bottom-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
}

.emotion-3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 100;
  --tw-text-opacity: 1;
  color: rgba(39, 39, 42, var(--tw-text-opacity));
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  margin-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media (min-width: 768px) {
  .emotion-6 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
  }
}

.emotion-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgba(39, 39, 42, var(--tw-text-opacity));
}

.emotion-10 {
  display: block;
  font-weight: 500;
  margin-bottom: 0.25rem;
}

.emotion-11 {
  outline: 2px solid transparent;
  outline-offset: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-12 {
  width: 100%;
  position: relative;
}

.emotion-13 {
  width: 100%;
  padding: 0.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  transition-property: background-color,border-color,color,fill,stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.emotion-13:focus {
  --tw-border-opacity: 1;
  border-color: rgba(147, 51, 234, var(--tw-border-opacity));
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-23 {
  width: 66.666667%;
  margin-right: 1rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgba(147, 51, 234, var(--tw-border-opacity));
  border-radius: 0.375rem;
  padding-top: 0.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  --tw-bg-opacity: 1;
  background-color: rgba(245, 243, 255, var(--tw-bg-opacity));
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
  height: 8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-25:focus {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow, 0 0 #0000);
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-26 {
  --tw-text-opacity: 1;
  color: rgba(147, 51, 234, var(--tw-text-opacity));
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 33.333333%;
}

.emotion-28 {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-29 {
  height: 5rem;
  width: 5rem;
  margin-top: 0.5rem;
  border-radius: 9999px;
}

.emotion-30 {
  padding: 1rem;
  border-top-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-31 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
}

.emotion-31:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-31:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(126, 34, 206, var(--tw-bg-opacity));
}

<div
    class="emotion-0"
    data-testid="modal-backdrop"
    style="opacity: 1;"
  >
    <div
      class="emotion-1"
      style="opacity: 1; transform: translateY(0%) translateZ(0);"
    >
      <div
        class="emotion-2"
      >
        <h5
          class="emotion-3"
        >
          usermanagement.onboarding.modal.title
        </h5>
      </div>
      <form>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <h4
                class="emotion-7"
              >
                usermanagement.onboarding.modal.introduction_text
              </h4>
            </div>
          </div>
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <label
                class="emotion-10"
              >
                usermanagement.onboarding.modal.form.label_firstName
              </label>
              <div
                class="emotion-11"
                style="transform: translate3d(0px, 0px, 0) scale(NaN, NaN); transform-origin: 50% 50% 0;"
              >
                <div
                  class="emotion-12"
                  style="transform: translate3d(NaNpx, NaNpx, 0) scale(NaN, NaN); transform-origin: 50% 50% 0;"
                >
                  <input
                    class="emotion-13"
                    data-testid="input-firstName"
                    name="firstName"
                    placeholder=" "
                    type="text"
                    value="test"
                  />
                </div>
              </div>
            </div>
            <div
              class="emotion-6"
            >
              <label
                class="emotion-10"
              >
                usermanagement.onboarding.modal.form.label_lastName
              </label>
              <div
                class="emotion-11"
                style="transform: translate3d(0px, 0px, 0) scale(NaN, NaN); transform-origin: 50% 50% 0;"
              >
                <div
                  class="emotion-12"
                  style="transform: translate3d(NaNpx, NaNpx, 0) scale(NaN, NaN); transform-origin: 50% 50% 0;"
                >
                  <input
                    class="emotion-13"
                    data-testid="input-lastName"
                    name="lastName"
                    placeholder=" "
                    type="text"
                    value="tost"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <label
                class="emotion-10"
              >
                usermanagement.onboarding.modal.form.label_picture
              </label>
              <div
                class="emotion-22"
              >
                <div
                  class="emotion-23"
                >
                  <div
                    class="emotion-24"
                  >
                    <div
                      class="emotion-25"
                      data-testid="file-input-picture"
                      tabindex="0"
                    >
                      <p
                        class="emotion-26"
                      >
                        components.form.fileinput.help_message
                      </p>
                      <input
                        accept="image/jpeg,image/png"
                        autocomplete="off"
                        multiple=""
                        name="picture"
                        style="display: none;"
                        tabindex="-1"
                        type="file"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-27"
                >
                  <p
                    class="emotion-28"
                  >
                    usermanagement.onboarding.modal.form.picture_preview
                  </p>
                  <img
                    alt="profile-preview"
                    class="emotion-29"
                    src="url"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-30"
        >
          <button
            class="emotion-31"
            data-testid="onboarding-modal-submit"
            type="submit"
          >
            usermanagement.onboarding.modal.form.btn_submit
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
